--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,3 +9,11 @@ services:
     volumes:
       - ./backend/courses.db:/app/courses.db
     command: uvicorn main:app --host 0.0.0.0 --port 8000
+
+  backend-tests:
+    build: ./backend
+    depends_on:
+      - backend
+    command: sh -c "PYTHONPATH=. pytest tests/"
+    volumes:
+      - ./backend:/app
