--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,13 +11,14 @@ jobs:
   test:
     runs-on: ubuntu-latest
     services:
-      postgres:
-        image: python:3.11
+      docker:
+        image: docker:24.0.6
+        options: --privileged
     steps:
       - uses: actions/checkout@v3
 
-      - name: Set up Docker buildx
-        uses: docker/setup-buildx-action@v2
+      - name: Set up Docker Compose
+        run: docker-compose up -d backend
 
-      - name: Build and run tests
-        run: docker compose run backend-tests
+      - name: Run backend tests
+        run: docker-compose run --rm backend-tests
