Updated Docker compose syntax

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,15 +10,26 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
-    services:
-      docker:
-        image: docker:24.0.6
-        options: --privileged
+    
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-      - name: Set up Docker Compose
-        run: docker-compose up -d backend
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Run backend container
+        run: docker compose up -d backend
+
+      - name: Wait for backend start
+        run: |
+            echo "Waiting for backend..."
+            for i in {1..10}; do
+                curl -s http://localhost:8000/docs && exit 0
+                sleep 3
+            done
+            echo "Backend did not start in time" >&2
+            exit 1
 
       - name: Run backend tests
-        run: docker-compose run --rm backend-tests
+        run: docker compose run --rm backend-tests
