--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,10 +25,15 @@ jobs:
         run: |
             echo "Waiting for backend..."
             for i in {1..10}; do
-                curl -s http://localhost:8000/docs && exit 0
+                if curl -s http://localhost:8000/docs > /dev/null; then
+                    echo "Backend started"
+                    exit 0
+                fi
+                echo "Retrying..."
                 sleep 3
             done
             echo "Backend did not start in time" >&2
+            docker compose logs backend
             exit 1
 
       - name: Run backend tests
