--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,9 +6,11 @@ services:
     container_name: uqcourse-backend
     ports:
       - "8000:8000"
-    volumes:
-      - ./backend/courses.db:/app/courses.db
+    environment:
+      - DB_PATH=courses.db
     command: uvicorn main:app --host 0.0.0.0 --port 8000
+    volumes:
+      - ./backend:/app
 
   backend-tests:
     build: ./backend
